# fortress

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build-client.yml  build-server.yml  clippy.yml
fortress-client/: Cargo.toml  README.md  build.rs  tauri.conf.json
fortress-client-ipc/: Cargo.toml  README.md
fortress-client-wasm/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  tailwind.config.js
fortress-client-wasm/src/: main.rs
fortress-client/src/: main.rs
fortress-server/: Cargo.toml  README.md
fortress-server-responses/: Cargo.toml  README.md
fortress-server/src/: main.rs
