[package]
name = "fortress-client"
description = "The desktop client for Fortress"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6.0", features = [] }
